Bug 807548.  Enumerating an Xray should not see the 'constructor' property on DOM prototypes unless we're told to include non-enumerable properties.  r=peterv